--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-VITE_RETELL_API_KEY=key_c6c997f814fff427d98f517f9267
+VITE_RETELL_API_KEY=key_13a1796273c3ec3a52c5e243d8ff
+VITE_BACKEND_URL=https://talkmybio-backend.replit.app
+VITE_FIREBASE_API_KEY=AIzaSyC2OdsRqao8sFfE9trQ0MYQe21BDNH1qJI
+VITE_FIREBASE_AUTH_DOMAIN=estomes-32558.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=estomes-32558
+VITE_FIREBASE_STORAGE_BUCKET=estomes-32558.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=271128729695
+VITE_FIREBASE_APP_ID=1:271128729695:web:8efb6a0e16f852fa87e3ea
+VITE_FIREBASE_MEASUREMENT_ID=G-44JBXRZH10
